Se agrego la validacion a la pagina de contactos para que aparezca en admin

--- a/admin.html
+++ b/admin.html
@@ -56,6 +56,31 @@
             </table>
           </div>
         </section>
+
+        <!-- Consultas -->
+        <section class="my-5 p-5 bg-dark">
+          <div class="row">
+            <div class="col-10">
+              <h3 class="color1">Consultas</h3>
+            </div>
+          </div>
+          <hr class="color2">
+          <div class="table-responsive my-5">
+            <table class="table color1">
+              <thead>
+                <tr>
+                  <th scope="col">Usuario</th>
+                  <th scope="col">Email</th>
+                  <th scope="col">Consulta</th>
+                </tr>
+              </thead>
+              <tbody id="tablaConsultas">
+              </tbody>
+            </table>
+          </div>
+        </section>
+
+
       </main>
       <!-- Modal Funkopop -->
       <div
