--- a/contacto.html
+++ b/contacto.html
@@ -1,134 +1,185 @@
 <!DOCTYPE html>
 <html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Pagina de streaming de series y peliculas"
+    />
+    <meta
+      name="keywords"
+      content="streaming, series, peliculas, shows, documentales"
+    />
+    <meta
+      name="Author"
+      content="Pablo Julian Alonso Olivera, Tulio Moya, David Diaz, Benjamin Draniczarek, Giselle Aguilar Barrionuevo"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato:300,400,700"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link rel="stylesheet" href="css\style.css" />
+    <link rel="shorcut icon" href="img\biona logo.png" type="image/x-icon" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/2ee0d9adf3.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>El Critico</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Pagina de streaming de series y peliculas">
-  <meta name="keywords" content="streaming, series, peliculas, shows, documentales">
-  <meta name="Author"
-    content="Pablo Julian Alonso Olivera, Tulio Moya, David Diaz, Benjamin Draniczarek, Giselle Aguilar Barrionuevo">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-  <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="css\style.css">
-  <link rel="shorcut icon" href="img\biona logo.png" type="image/x-icon">
-  <link href="https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/2ee0d9adf3.js" crossorigin="anonymous"></script>
-  <title>El Critico</title>
-</head>
-
-<body class="footfix">
-  <header>
-    <nav class="navbar navbar-expand-lg navbar-dark headFoot">
-      <div class="container">
-        <a class="navbar-brand" href="#">El Critico</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="login.html">Login/Registro</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link d-none" href="admin.html">Administracion</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="contacto.html">Contacto</a>
+  <body class="footfix">
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark headFoot">
+        <div class="container">
+          <a class="navbar-brand" href="#">El Critico</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="index.html"
+                  >Inicio</a
+                >
               </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-  </header>
-  <main class="container mt-5 py-5">
-    <section class="row">
-      <div class="col-sm-12 col-md-6">
-        <h2 class="lead text-start text-light mb-4">
-          Envianos tu consulta.
-        </h2>
-        <div class="input-group mb-3">
-          <div class="input-group-prepend">
+              <li class="nav-item">
+                <a class="nav-link" href="login.html">Login/Registro</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link d-none" href="admin.html">Administracion</a>
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="contacto.html"
+                  >Contacto</a
+                >
+              </li>
+            </ul>
           </div>
-          <input
-            type="text"
-            class="form-control"
-            placeholder="El Critico"
-            aria-label="Username"
-            aria-describedby="basic-addon1"
-          />
         </div>
-        <div class="input-group mb-3">
-          <div class="input-group-prepend">
+      </nav>
+    </header>
+    <main class="container mt-5 py-5">
+      <section class="row">
+        <form class="col-sm-12 col-md-6">
+          <div>
+            <h2 class="lead text-start text-light mb-4">
+              Envianos tu consulta.
+            </h2>
+            <div class="input-group mb-3">
+              <div class="input-group-prepend"></div>
+              <input
+                required
+                type="text"
+                class="form-control"
+                placeholder="El Critico"
+                aria-label="Username"
+                aria-describedby="basic-addon1"
+                id="input_usuario"
+              />
+            </div>
+            <div class="input-group mb-3">
+              <div class="input-group-prepend"></div>
+              <input
+                required
+                type="email"
+                class="form-control"
+                placeholder="elcritico@gmail.com"
+                aria-label="Username"
+                aria-describedby="basic-addon1"
+                id="input_email"
+              />
+            </div>
+            <div class="input-group">
+              <div class="input-group-prepend"></div>
+              <textarea
+                required
+                class="form-control"
+                aria-label="With textarea"
+                placeholder="Me encanta su pagina :)"
+                id="input_consulta"
+              ></textarea>
+            </div>
+            <a href="404.html"
+              ><button type="submit" class="btn btn-light my-3" id="btn_enviar">
+                Enviar
+              </button></a
+            >
           </div>
-          <input
-            type="text"
-            class="form-control"
-            placeholder="elcritico@gmail.com"
-            aria-label="Username"
-            aria-describedby="basic-addon1"
-          />
-        </div>
-        <div class="input-group">
-          <div class="input-group-prepend">
+        </form>
+        <div class="col-sm-12 col-md-6">
+          <article class="lead text-light">
+            Encontranos en Gral. Paz 576, T4000 San Miguel de Tucumán, Tucumán
+          </article>
+          <div class="mt-5">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3560.1023707775184!2d-65.20939048529601!3d-26.83669609650096!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94225d3ad7f30f1d%3A0xf8606cd659b8e3e4!2sRollingCode%20School!5e0!3m2!1ses-419!2sar!4v1605411094060!5m2!1ses-419!2sar"
+              width="400"
+              height="250"
+              frameborder="3"
+              style="border: 0"
+              allowfullscreen=""
+              aria-hidden="false"
+              tabindex="0"
+              class="map w-100 p-0"
+            ></iframe>
           </div>
-          <textarea
-            class="form-control"
-            aria-label="With textarea"
-            placeholder="Me encanta su pagina :)"
-          ></textarea>
         </div>
-        <a href="404.html"><button type="button" class="btn btn-light my-3">Enviar</button></a>
-
-      </div>
-      <div class="col-sm-12 col-md-6">
-        <article class="lead text-light">Encontranos en Gral. Paz 576, T4000 San Miguel de Tucumán, Tucumán</article>
-        <div class="mt-5">
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3560.1023707775184!2d-65.20939048529601!3d-26.83669609650096!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94225d3ad7f30f1d%3A0xf8606cd659b8e3e4!2sRollingCode%20School!5e0!3m2!1ses-419!2sar!4v1605411094060!5m2!1ses-419!2sar"
-            width="400"
-            height="250"
-            frameborder="3"
-            style="border: 0"
-            allowfullscreen=""
-            aria-hidden="false"
-            tabindex="0"
-          class="map w-100 p-0"></iframe>
-        </div>
-      </div>
-
-
-    </section>
-  </main>
-  <footer class="headFoot py-5">
-    <section class="py-4 text-center text-light">
-      <article class="row mx-0">
-        <div class="col-sm-12 col-md-12 col-lg-4 py-3">
-        </div>
-        <div class="col-sm-12 col-md-6 col-lg-4 ">
-          <h5>Online desde 2021</h5>
-          <p>&copy; El Critico. Todos los derechos reservados.</p>
-        </div>
-        <div class="col-sm-12 col-md-6 col-lg-4 ">
-          <h5>Seguinos en nuestras redes sociales:</h5>
-          <a href="404.html" target="_blank" class="text-info mx-2"><i class="fab fa-facebook fa-3x"></i></a>
-          <a href="404.html" target="_blank" class="text-light mx-2"><i class="fab fa-instagram-square fa-3x"></i></a>
-          <a href="404.html" target="_blank" class="text-primary mx-2"><i class="fab fa-twitter fa-3x"></i></a>
-        </div>
-      </article>
-    </section>
-  </footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
-    crossorigin="anonymous"></script>
-  <script src="js/app.js"></script>
-  <script type="module" src="js/index.js"></script>
-</body>
-
+      </section>
+    </main>
+    <footer class="headFoot py-5">
+      <section class="py-4 text-center text-light">
+        <article class="row mx-0">
+          <div class="col-sm-12 col-md-12 col-lg-4 py-3"></div>
+          <div class="col-sm-12 col-md-6 col-lg-4">
+            <h5>Online desde 2021</h5>
+            <p>&copy; El Critico. Todos los derechos reservados.</p>
+          </div>
+          <div class="col-sm-12 col-md-6 col-lg-4">
+            <h5>Seguinos en nuestras redes sociales:</h5>
+            <a href="404.html" target="_blank" class="text-info mx-2"
+              ><i class="fab fa-facebook fa-3x"></i
+            ></a>
+            <a href="404.html" target="_blank" class="text-light mx-2"
+              ><i class="fab fa-instagram-square fa-3x"></i
+            ></a>
+            <a href="404.html" target="_blank" class="text-primary mx-2"
+              ><i class="fab fa-twitter fa-3x"></i
+            ></a>
+          </div>
+        </article>
+      </section>
+    </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+      crossorigin="anonymous"
+    ></script>
+    <script src="js/app.js"></script>
+    <script type="module" src="js/index.js"></script>
+    <script  src="js/contacto.js"></script>
+  </body>
 </html>
